--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -258,6 +258,7 @@ a {
   text-decoration: underline;
   text-align: center;
   cursor: pointer;
+  color: var(--nav-link);
   border: none !important;
 }
 
